Complete content for fish-taco.html

--- a/recipes/fish-taco.html
+++ b/recipes/fish-taco.html
@@ -6,5 +6,42 @@
 </head>
 <body>
     <h1>Fish tacos</h1>
+    <img src="img/fish-taco.webp">
+    <h2>Description</h2>
+    <h3>Easy Fish Tacos with Mango-Pineapple Slaw</h3>
+    <p>Delicious easy to make fish tacos for the whole family!</p>
+    <h4>Ingredients</h4>
+    <ul>
+        <li>1 pound cod fillets</li>
+        <li>1 tablespoon lemon juice</li>
+        <li>salt and ground black pepper to taste</li>
+        <li>½ cup red wine vinegar</li>
+        <li>¼ cup reduced-fat mayonnaise</li>
+        <li>1 tablespoon white sugar</li>
+        <li>1 tablespoon salt</li>
+        <li>1 tablespoon ground black pepper</li>
+        <li>1 teaspoon garlic powder</li>
+        <li>3 cups shredded cabbage</li>
+        <li>½ cup chopped fresh mango</li>
+        <li>½ cup chopped fresh pineapple</li>
+        <li>½ cup chopped red onion</li>
+        <li>¼ cup chopped fresh cilantro</li>
+        <li>1 fresh jalapeno pepper, chopped</li>
+        <li>8 (8 inch) flour tortillas</li>
+    </ul>
+    <h4>Steps</h4>
+    <ol>
+        <li>Preheat the oven to 375 degrees F (190 degrees C).</li>
+        <li>Place cod fillets on a large sheet of aluminum foil; pour lemon juice over fish and 
+            season with salt and black pepper to taste. Fold the foil around the fish and seal to 
+            create a pouch; place pouch in a baking dish.</li>
+        <li>Bake in the preheated oven until the fish flakes easily with a fork, about 20 minutes.
+        </li>
+        <li>Meanwhile, whisk vinegar, mayonnaise, sugar, 1 tablespoon salt, 1 tablespoon black pepper,
+            and garlic powder in a bowl until smooth. Combine cabbage, mango, pineapple, red onion, 
+            cilantro, and jalapeno in large bowl. Pour dressing over vegetables and fruit; toss to 
+            combine. Cover and refrigerate slaw until ready to serve.</li>
+        <li>Divide fish evenly among flour tortillas. Spoon slaw over fish to serve.</li>
+    </ol>
 </body>
 </html>
