Add two more recipes
-Added recipes for ceviche and slugburger.
-Added links for both recipes
-Added alt text for all images

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/fish-taco.html">Fish tacos</a>
+    <ul>
+        <li><a href="recipes/fish-taco.html">Fish tacos</a></li>
+        <li><a href="recipes/slugburger.html"> Mississippi Slugburger</a></li>
+        <li><a href="recipes/ceviche.html">Basic ceviche</a></li>
+    </ul>
 </body>
 </html>
