--- a/recipes/slugburger.html
+++ b/recipes/slugburger.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Mississippi slugburger</h1>
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F05%2F10%2FIMG_7328-2000.jpg" 
-    width="650" height="500">
+    width="650" height="500" alt="Slugburger image">
     <h2>Description</h2>
     <p>
         If you've seen our Prison Meatloaf video, you know I have no problem adding lots of cheap, 
