--- a/recipes/fish-taco.html
+++ b/recipes/fish-taco.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Fish tacos</h1>
-    <img src="img/fish-taco.webp">
+    <img src="img/fish-taco.webp" alt="fish taco image">
     <h2>Description</h2>
     <h3>Easy Fish Tacos with Mango-Pineapple Slaw</h3>
     <p>Delicious easy to make fish tacos for the whole family!</p>
