--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
+    <ul class="list">
         <li><a href="recipes/fish-taco.html">Fish tacos</a></li>
         <li><a href="recipes/slugburger.html"> Mississippi Slugburger</a></li>
         <li><a href="recipes/ceviche.html">Basic ceviche</a></li>
