--- a/recipes/ceviche.html
+++ b/recipes/ceviche.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Ceviche</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <h1>Basic ceviche</h1>
@@ -11,7 +12,7 @@
     <p>Super light and refreshing. I use the recipe without the fish (reduce the lime juice) 
         as a topper for grilled tuna. Serves 4 as a lunch, 8 as an appetizer.</p>
     <h3>Ingredients</h3>
-    <ul>
+    <ul class="list">
         <li>1 pound halibut, cut into bite-size pieces</li>
         <li>½ cup lime juice</li>
         <li>1 large tomato, seeded and diced</li>
@@ -23,7 +24,7 @@
         <li>4 cloves garlic, minced</li>
     </ul>
     <h3>Steps</h3>
-    <ol>
+    <ol class="list">
         <li>Place fish into a flat dish; cover with lime juice. Chill fish in refrigerator until 
             tender and opaque, at least 3 hours. Drain lime juice.</li>
         <li>Mix tomato, cilantro, green bell pepper, green onion, jalapeno pepper, garlic, salt, 
