--- a/recipes/fish-taco.html
+++ b/recipes/fish-taco.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Fish tacos</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <h1>Fish tacos</h1>
@@ -11,7 +12,7 @@
     <h3>Easy Fish Tacos with Mango-Pineapple Slaw</h3>
     <p>Delicious easy to make fish tacos for the whole family!</p>
     <h4>Ingredients</h4>
-    <ul>
+    <ul class="list">
         <li>1 pound cod fillets</li>
         <li>1 tablespoon lemon juice</li>
         <li>salt and ground black pepper to taste</li>
@@ -30,7 +31,7 @@
         <li>8 (8 inch) flour tortillas</li>
     </ul>
     <h4>Steps</h4>
-    <ol>
+    <ol class="list">
         <li>Preheat the oven to 375 degrees F (190 degrees C).</li>
         <li>Place cod fillets on a large sheet of aluminum foil; pour lemon juice over fish and 
             season with salt and black pepper to taste. Fold the foil around the fish and seal to 
