--- a/recipes/slugburger.html
+++ b/recipes/slugburger.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Mississippi Slugburger</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <h1>Mississippi slugburger</h1>
@@ -16,7 +17,7 @@
         first thought was, I really need to make this. Well, actually my first thought was, I'm glad 
         this doesn't have slugs in it. Anyway, the point is I knew I'd love it, and I did. A lot.</p>
     <h3>Ingredients</h3>
-    <ul>
+    <ul class="list">
         <li>7 slices potato bread</li>
         <li>1 pound ground chuck</li>
         <li>1 teaspoon kosher salt</li>
@@ -31,7 +32,7 @@
         <li>1 pinch cayenne pepper, or to taste (Optional)</li>
     </ul>
     <h3>Steps</h3>
-    <ol>
+    <ol class="list">
         <li>Preheat the oven to 175 degrees F (80 degrees C). Line a baking sheet with parchment
             paper.</li>
         <li>Cut the crusts off the bread slices. Place slices on the prepared baking sheet.</li>
